--- a/conf/local.conf
+++ b/conf/local.conf
@@ -93,3 +93,7 @@ SWIFT_REPLICAS=1
 # moved by setting ``SWIFT_DATA_DIR``. The directory will be created
 # if it does not exist.
 SWIFT_DATA_DIR=$DEST/data
+
+# Heat
+# ----
+enable_service heat h-api h-api-cfn h-api-cw h-eng
